src/Feature Dynamic Apex Assignment 2/objects/Archive_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Archive_Config</label>
    <pluralLabel>Archive_Configs</pluralLabel>
</CustomObject>